# virtual-senban

./: .clang-format  CMakeLists.txt  README.md  main.cpp
doc/: uml.md
src/: CMakeLists.txt  main.cpp
src/SerialPort/: CMakeLists.txt  README.md
src/SerialPort/include/: Serial.hpp
src/SerialPort/src/: Linux_Serial.cpp  Serial.cpp
src/callback/: CMakeLists.txt
src/callback/cpp/: display.cpp  idle.cpp  initialize.cpp  keyboard.cpp  motion.cpp  mouse.cpp  passive_motion.cpp  resize.cpp
src/callback/hpp/: callback.hpp  display.hpp  idle.hpp  initialize.hpp  keyboard.hpp  motion.hpp  mouse.hpp  passive_motion.hpp  resize.hpp
src/game/: CMakeLists.txt
src/game/include/: Game.hpp  Helping.hpp  Mouse.hpp  Space.hpp  Window.hpp
src/game/src/: Bite.cpp  Cylinder.cpp  Game.cpp  Helping.cpp  Mouse.cpp  RealBite.cpp  Space.cpp
src/global/: CMakeLists.txt
src/global/cpp/: global.cpp
src/global/hpp/: global.hpp
src/instance/: CMakeLists.txt
src/instance/cpp/: instance.cpp
src/instance/hpp/: instance.hpp
src/object/: CMakeLists.txt
src/object/cpp/: bite.cpp  cylinder.cpp  work.cpp
src/object/hpp/: bite.hpp  cylinder.hpp  work.hpp
src/state/: CMakeLists.txt
src/state/cpp/: Bite.cpp  Cylinder.cpp  Global.cpp  Helping.cpp  Mouse.cpp  RealBite.cpp  Space.cpp  bite.cpp  cylinder.cpp  global.cpp
src/state/hpp/: Bite.hpp  Camera.h  Camera.hpp  Cylinder.hpp  Global.hpp  Mouse.hpp  RealBite.hpp  Space.hpp  Window.h  bite.hpp  camera.h  cylinder.hpp  global.hpp  point.hpp  window.h
src/util/: CMakeLists.txt
src/util/cpp/: mouse_mapping.cpp
(+1 files in other folders)
